# delta-engine

./: .gitignore  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
delta-engine/: README.md  mkdocs.yml  pyproject.toml
delta-engine/.github/workflows/: ci.yaml
delta-engine/delta_engine/: __init__.py  log_config.py
delta-engine/delta_engine/adapters/databricks/: __init__.py  build_engine.py  errors.py  policy.py  preview.py
delta-engine/delta_engine/adapters/databricks/catalog/: compile.py  executor.py  reader.py
delta-engine/delta_engine/adapters/databricks/sql/: __init__.py  catalog_read.py  compile.py  dialect.py  read.py  types.py
delta-engine/delta_engine/adapters/schema/: __init__.py  column.py
delta-engine/delta_engine/adapters/schema/delta/: properties.py  table.py
delta-engine/delta_engine/application/: engine.py  errors.py  format_report.py  formatting.py  ordering.py  plan.py  ports.py  registry.py  report_format.py  results.py  validation.py
delta-engine/delta_engine/domain/: __init__.py  normalise_identifier.py
delta-engine/delta_engine/domain/model/: __init__.py  _normalise_identifier.py  column.py  data_type.py  identifier.py  normalise_identifier.py  qualified_name.py  table.py
delta-engine/delta_engine/domain/plan/: __init__.py  actions.py
delta-engine/delta_engine/domain/services/: column_diff.py  differ.py  property_diff.py  table_diff.py
delta-engine/delta_engine/schema/: __init__.py  column.py  convert.py  delta.py  types.py
delta-engine/docs/: architecture.md
delta-engine/docs/javascripts/: mermaid.js
delta-engine/tests/: config.py  conftest.py  factories.py
delta-engine/tests/adapters/databricks/: test_policy.py  test_preview.py
delta-engine/tests/adapters/databricks/catalog/: test_executor.py  test_reader.py
delta-engine/tests/adapters/databricks/sql/: test_compile.py  test_dialect.py  test_policy.py  test_preview.py  test_types.py
delta-engine/tests/adapters/databricks/sql/dialects/: test_ansi_sql.py  test_base.py  test_spark_sql.py
delta-engine/tests/adapters/schema/: test_column.py  test_delta.py
delta-engine/tests/adapters/schema/table/: test_delta.py
delta-engine/tests/application/: test_engine.py  test_errors.py  test_ordering.py  test_plan.py  test_ports.py  test_registry.py  test_results.py  test_validation.py
delta-engine/tests/domain/: test__identifiers.py  test_normalise_identifier.py
delta-engine/tests/domain/model/: test__normalise_identifier.py  test_column.py  test_data_type.py  test_identifier.py  test_normalise_identifier.py  test_qualified_name.py  test_table.py
delta-engine/tests/domain/plan/: test_actions.py
delta-engine/tests/domain/services/: test_column_diff.py  test_differ.py  test_table_diff.py
delta-engine/tests/e2e/: test_engine_e2e.py  test_engine_end_to_end.py  test_tabula_end_to_end.py
delta-engine/tests/schema/: test_column.py  test_delta.py  test_types.py
docs/: - Make qualified name available on candi.md  architecture.md  conf.py  design-review.md  explanation-architecture.md  how-to-add-action-type.md  how-to-configure-properties.md  index.rst  todo.md  (+12 more)
tabula/: .gitignore  README.md  pyproject.toml
tabula/tabula/: __init__.py
tabula/tabula/adapters/databricks/: __init__.py  build_engine.py
tabula/tabula/adapters/databricks/catalog/: __init__.py  compile.py  executor.py  plan_executor.py  reader.py  spark_reader.py
tabula/tabula/adapters/databricks/sql/: __init__.py  compile.py  dialect.py  types.py
tabula/tabula/adapters/databricks/sql/dialects/: __init__.py  ansi_sql.py  base.py  spark_sql.py
tabula/tabula/adapters/outbound/unity_catalog/sql/: compile.py  executor.py
tabula/tabula/application/: change_target.py  engine.py  errors.py  execute.py  ordering.py  plan.py  ports.py  registry.py  results.py  validation.py
tabula/tabula/application/plan/: __init__.py  order_plan.py  plan.py  plan_context.py
tabula/tabula/domain/: __init__.py  _identifiers.py
tabula/tabula/domain/model/: __init__.py  _identifiers.py  actions.py  change_target.py  column.py  data_type.py  full_name.py  qualified_name.py  table.py  table_spec.py  table_state.py  types.py
tabula/tabula/domain/model/data_type/: __init__.py  data_type.py  types.py
tabula/tabula/domain/plan/: __init__.py  actions.py
tabula/tabula/domain/services/: __init__.py  column_diff.py  differ.py
tabula/tabula/domain/validation/: __init__.py  coercions.py  type_rules.py
tabula/tabula/schema/: column.py  convert.py  delta.py  types.py
tabula/tests/: conftest.py  factories.py
tabula/tests/adapters/databricks/catalog/: test_executor.py  test_reader.py
tabula/tests/adapters/databricks/sql/: test_compile.py  test_types.py
tabula/tests/adapters/databricks/sql/dialects/: test_ansi_sql.py  test_base.py  test_spark_sql.py
tabula/tests/adapters/outbound/unity_catalog/: test_compile.py  test_executor.py  test_ident.py  test_spark_reader.py  test_types.py
tabula/tests/adapters/outbound/unity_catalog/sql/: test_compile.py  test_executor.py
tabula/tests/application/: test_change_target.py  test_engine.py  test_errors.py  test_execute.py  test_order_plan.py  test_ordering.py  test_plan.py  test_ports.py  test_results.py  test_validation.py
tabula/tests/application/plan/: test_order_plan.py  test_plan.py  test_plan_context.py
tabula/tests/domain/: test__identifiers.py  test_identifiers.py
tabula/tests/domain/model/: test_actions.py  test_change_target.py  test_column.py  test_data_type.py  test_full_name.py  test_identifier.py  test_qualified_name.py  test_table.py  test_table_spec.py  test_table_state.py  test_tables.py  test_types.py
tabula/tests/domain/model/data_type/: test_data_type.py  test_types.py
tabula/tests/domain/plan/: test_actions.py
tabula/tests/domain/services/: test_column_diff.py  test_differ.py
tabula/tests/domain/validation/: test_coercions.py  test_type_rules.py
tabula/tests/e2e/: test_e2e_uc_sql.py  test_plan_and_execute.py  test_tabula_end_to_end.py
(+112 files in other folders)
